# tides-lab

./: .gitignore  AGENT_CODE_REVIEW.md  AI-CONFIGURATION-GUIDE-V2.md  CLAUDE.md  ENERGY_DATABASE_INTEGRATION.md  NEXT-STEP.md  README.md  REVIVAL_PLAN.md  TODO.md  TODOS.md  agent-chat-improved.md  bikini-bottom-architecture.md  how-tides-work.md  mcp-tool-flow-diagram.md  package-lock.json  package.json  tides-mcp-tools-parameters.md  tides_architecture_analysis.md
.claude/: settings.local.json
.claude/commands/: battle-test.md  final-pass.md  improve-specs.md  make-friendly.md  omit-code.md
analysis/: codebase-analysis-progress.md  project-overview.md
apps/agent/: README.md  downloaded-tide.json  (+5 more)
apps/demo/st_client/: README.md  app.py  pyproject.toml
apps/demo/st_client/src/: __init__.py
apps/demo/st_client/src/components/: __init__.py  api_tests_tab.py  chat_tab.py  help_tab.py  mcp_tools_tab.py  monitoring_tab.py
apps/demo/st_client/src/config/: __init__.py  settings.py
apps/demo/st_client/src/services/: __init__.py  agent_client.py  mcp_client.py
apps/demo/st_client/src/utils/: __init__.py  helpers.py
docs/: NOTES.md  README.md  SPEC-automatic-tides.md  activating-ai.md  adr-004-eliminate-active-tides-system.md  api.md  energy-architecture-spec.md  mobile-mcp-authentication-flow.md  quick-auth-setup-plan.md
fix-todos/: plan.md  state.json
implement/: plan.md  schema-design.md  source-analysis.md  state.json  tide-context-fix.md  validation-checklist.md  validation-report.md
refactor/: plan.md  state.json
scripts/: dev.js  setup.js
(+494 files in other folders)
